--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,7 +10,7 @@
     <include layout="@layout/app_bar_layout"
         android:id="@+id/chat_appbar"/>
     
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.core.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:id="@+id/message_swipe_layout"
         android:layout_height="match_parent"
@@ -23,7 +23,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="55dp"
         android:layout_marginBottom="57dp"></android.support.v7.widget.RecyclerView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.core.widget.SwipeRefreshLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
