--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,9 @@
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
         android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
-   <android.support.v4.view.ViewPager
+   <androidx.core.view.ViewPager
        android:id="@+id/main_tabPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:layout_marginTop="104dp"></android.support.v4.view.ViewPager>
+       android:layout_marginTop="104dp"></androidx.core.view.ViewPager>
 </RelativeLayout>
