--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,20 +10,20 @@
     <include layout="@layout/app_bar_layout"
         android:id="@+id/chat_appbar"/>
     
-    <androidx.core.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:id="@+id/message_swipe_layout"
         android:layout_height="match_parent"
         android:layout_marginTop="55dp"
         android:layout_marginBottom="57dp">
     
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messages_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="55dp"
-        android:layout_marginBottom="57dp"></android.support.v7.widget.RecyclerView>
-    </androidx.core.widget.SwipeRefreshLayout>
+        android:layout_marginBottom="57dp"></androidx.recyclerview.widget.RecyclerView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
