--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.design.widget.AppBarLayout>
+        android:layout_height="wrap_content"></com.google.android.material.appbar.AppBarLayout>
     <include layout="@layout/app_bar_layout"
         android:id="@+id/mainpage_toolbar"/>
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/main_tabs"
         android:layout_marginTop="55dp"
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
-   <androidx.core.view.ViewPager
+        android:layout_height="wrap_content"></com.google.android.material.tabs.TabLayout>
+   <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_tabPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:layout_marginTop="104dp"></androidx.core.view.ViewPager>
+       android:layout_marginTop="104dp"></androidx.viewpager.widget.ViewPager>
 </RelativeLayout>
