--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,13 +7,13 @@
 
     tools:context=".ProfileActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -31,9 +31,9 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"/>
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-     <android.support.v7.widget.Toolbar
+     <androidx.appcompat.widget.Toolbar
          android:layout_width="match_parent"
          android:layout_height="60dp"
          app:layout_collapseMode="pin"
@@ -47,11 +47,11 @@
              android:textColor="#fff"
              android:layout_height="wrap_content"
              />
-     </android.support.v7.widget.Toolbar>
+     </androidx.appcompat.widget.Toolbar>
 
 
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
 
