--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/users_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="55dp"></android.support.v7.widget.RecyclerView>
+        android:layout_marginTop="55dp"></androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
