--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".ProfileActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -22,7 +21,8 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_marginTop="10dp"
                 android:id="@+id/profile_imageView"
                 android:layout_width="match_parent"
                 android:src="@drawable/contacts_picture"
@@ -39,6 +39,7 @@
          app:layout_collapseMode="pin"
          >
          <TextView
+             android:fontFamily="@font/poppinsmedium"
              android:id="@+id/profile_displayname"
              android:layout_width="wrap_content"
              android:text="Display Name"
@@ -54,63 +55,62 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-
-
-
     <TextView
         android:id="@+id/profile_status"
-        android:padding="3dp"
         android:layout_width="wrap_content"
-        android:text="Status...."
-
-        android:textSize="17sp"
-        android:layout_marginLeft="110dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="360dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="370dp"
+        android:fontFamily="@font/poppinsregular"
+        android:padding="3dp"
+        android:text="Status...."
+        android:textSize="16sp" />
 
     <TextView
+        android:fontFamily="@font/poppinsregular"
+        android:layout_centerHorizontal="true"
         android:id="@+id/profile_totalfriends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:layout_above="@+id/profile_requestbtn"
+        android:layout_above="@+id/profile_requestbtn"
         android:layout_marginLeft="130dp"
-       android:layout_marginBottom="5dp"
         android:layout_marginRight="110dp"
+        android:layout_marginBottom="5dp"
         android:padding="3dp"
         android:text="Total Friends"
-        android:textSize="15sp"
-        />
+        android:textSize="15sp" />
 
     <Button
+        android:layout_marginHorizontal="20dp"
         android:id="@+id/profile_requestbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/profile_requestdeclinebtn"
-       android:layout_marginBottom="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@color/colorAccent"
-        android:padding="5dp"
         android:layout_gravity="bottom"
-        android:text="Send  FRIEND  REQUEST"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/bg_btn_orange"
+        android:fontFamily="@font/poppinsregular"
+        android:padding="5dp"
+        android:text="Send Friend Request"
+        android:textAllCaps="false"
         android:textColor="#fff"
-        android:textStyle="bold"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/profile_requestdeclinebtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/bg_btn_orange"
+        android:fontFamily="@font/poppinsregular"
         android:padding="10dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="DECLINE FRIEND REQUEST"
-        android:textColor="#fff" />
+        android:text="Decline Friend Request"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="16sp" />
 
 
 </RelativeLayout>
