--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     tools:context=".SettingsActivity">
 
 
@@ -15,41 +14,46 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="37dp"
-        android:src="@drawable/contacts_icon" />
+        android:src="@drawable/contacts_picture" />
 
     <TextView
         android:id="@+id/settings_displayname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="270dp"
+        android:fontFamily="@font/poppinsmedium"
         android:text="Display Name"
         android:textSize="22sp"
-        android:layout_marginLeft="130dp"
-        android:textColor="#000000"
-        android:layout_marginTop="270dp"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/settings_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hi,There I am Using SmartChat"
-        android:textSize="15sp"
-        android:padding="3dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="80dp"
+        android:layout_marginTop="300dp"
+        android:fontFamily="@font/poppinsregular"
+        android:padding="3dp"
+        android:text="Hi there, I am using SmartChat"
         android:textColor="#000000"
-        android:layout_marginTop="310dp"/>
+        android:textSize="12sp" />
 
     <Button
+        android:fontFamily="@font/poppinsregular"
+        android:paddingHorizontal="20dp"
         android:id="@+id/settings_imagebtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
-        android:background="#ffffff"
-        android:padding="10dp"
+        android:background="@drawable/bg_btn_white"
         android:text="Change iamge"
         android:textColor="@color/colorPrimary" />
+
     <Button
         android:id="@+id/settings_statusbtn"
         android:layout_width="wrap_content"
@@ -57,8 +61,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"
-        android:background="@color/colorAccent"
-        android:padding="5dp"
+        android:background="@drawable/bg_btn_orange"
+        android:fontFamily="@font/poppinsregular"
+        android:paddingHorizontal="20dp"
         android:text="Change Status"
         android:textColor="#ffffff" />
 
