--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -9,7 +9,9 @@
         android:id="@+id/conv_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_alignParentStart="true">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </FrameLayout>
