--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ToolbarFont" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/poppinsmedium</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TabsFont" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/poppinsmedium</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
